Added Login Panel

--- a/POSProject/POSProject.csproj
+++ b/POSProject/POSProject.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Reustaurant_logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Fonts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Reustaurant_logo.png" />
   </ItemGroup>
 
 </Project>
